Checkbox visual fixes: more precise spacing between label and checkbox, correct regression that adds top margins to the Tooltip.

--- a/assets/src/components/checkboxControl/style.scss
+++ b/assets/src/components/checkboxControl/style.scss
@@ -27,7 +27,7 @@
 	}
 
 	label.components-checkbox-control__label {
-		margin-left: 2em;
+		margin-left: 28px;
 		font-size: 16px;
 	}
 }
